--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,1 +1,2 @@
 DB_CONNECTION=postgresql://user:password@127.0.0.1:5432/db_name?sslmode=disable&application_name=myapp
+JWT_KEY=a_secret_key_to_sign_the_tokens
