--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -13,8 +13,14 @@ services:
       PORT: "10000"
       DB_CONNECTION: "postgresql://styk_user:styk_password@styk_db:5432/styk?sslmode=disable&application_name=styk_be"
       JWT_KEY: "shorter_than_you_know"
+    restart: unless-stopped
     depends_on:
       - database
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   front_end:
     build:
@@ -25,6 +31,7 @@ services:
       - 10001:80
     networks:
       - styk_network
+    restart: unless-stopped
     environment:
       TZ: "Europe/Rome"
       VITE_API_BASE_URL: "http://styk_be:10000/api"
@@ -36,6 +43,7 @@ services:
       - 10864:5432
     networks:
       - styk_network
+    restart: unless-stopped
     environment:
       POSTGRES_USER: styk_user
       POSTGRES_PASSWORD: styk_password
